Fixed portfolio article overflows

--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,7 @@ article {
 }
 
 main article {
-	height: 610px;
+	height: 650px;
 }
 
 article:hover, article:focus-within, h1:focus {
